<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Map Fragment -->

    <Button
        android:id="@+id/btnSignOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:onClick="onBtnSignOut"
        android:text="Sign Out" />

    <fragment
        android:id="@+id/donorMap"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_select_blood_types"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginStart="345dp"
        android:src="@drawable/baseline_filter_list_24"
        android:contentDescription="Select Blood Types"
        app:backgroundTint="@color/blue_variant" />


    <!-- Search Bar -->
    <android.widget.SearchView
        android:id="@+id/searchView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:background="#4B4A4A"
        android:iconifiedByDefault="false"
        android:queryHint="Search Donation Sites"
        android:visibility="invisible" />

    <LinearLayout
        android:id="@+id/proxyDonorForm"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:visibility="invisible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="visible">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:onClick="onBtnCloseDonor"
                android:text="Close" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:gravity="center_horizontal"
            android:text="Register for Other"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/firstNameTextView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="24dp"
            android:text="@string/first_name"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/firstNameProxy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/enter_your_first_name"
            android:inputType="text"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/lastNameTextView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="24dp"
            android:text="@string/last_name"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/lastNameProxy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/enter_your_last_name"
            android:inputType="text"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/emailView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="24dp"
            android:text="@string/email"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/emailProxy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/enter_your_email_address"
            android:inputType="text"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/dateOfBirthTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:text="@string/date_of_birth"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/dateOfBirthProxy"
            android:layout_width="366dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="24dp"
            android:clickable="true"
            android:focusable="true"
            android:hint="@string/click_here_to_select_date_of_birth"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/sexTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="24dp"
            android:text="@string/select_your_sex"
            android:textSize="18sp" />

        <RadioGroup
            android:id="@+id/sexRadioGroupProxy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:orientation="horizontal"
            android:paddingHorizontal="10dp">

            <RadioButton
                android:id="@+id/maleRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male" />

            <RadioButton
                android:id="@+id/femaleRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female" />

            <RadioButton
                android:id="@+id/otherRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/other" />
        </RadioGroup>

        <TextView
            android:id="@+id/bloodTypeTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:text="@string/select_your_blood_type"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/bloodTypeSpinnerProxy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="24dp" />

        <Button
            android:id="@+id/btnProxy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="24dp"
            android:onClick="onBtnProxy"
            android:text="Confirm Registration" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/viewSiteDonor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="invisible"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="2dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:text="Site Name: "
                android:textStyle="bold" />

            <TextView
                android:id="@+id/siteNameViewDonor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="this is the name" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="2dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:text="Address: "
                android:textStyle="bold" />

            <TextView
                android:id="@+id/addressViewDonor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="216 Tran Van Tra, phuong Tan Phong, quan 7, TP.HCM" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="2dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:text="Opening Hours: "
                android:textStyle="bold" />

            <TextView
                android:id="@+id/openingHoursViewDonor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="9am to 5pm" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="2dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:text="Required Blood Types: "
                android:textStyle="bold" />

            <TextView
                android:id="@+id/requiredBTViewDonor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="A+, B+, O+" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnFindRoute"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/blue_variant"
                android:onClick="onBtnFindRoute"
                android:text="Get Directions" />

            <Button
                android:id="@+id/btnRegisterSelf"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:onClick="onBtnRegisterSelf"
                android:text="Register to Donate"
                android:visibility="visible" />

            <Button
                android:id="@+id/btnRegisterOther"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onBtnRegisterOther"
                android:text="Register for Other" />
        </LinearLayout>



    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
