<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SignInActivity">


    <LinearLayout
        android:id="@+id/emailPasswordSignIn"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            android:id="@+id/signInTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            android:gravity="center"
            android:text="Sign In To Your Account"
            android:textSize="24dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/wrongInformationTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="24dp"
            android:gravity="center"
            android:text="Invalid email address or password"
            android:textColor="@color/red_variant"
            android:textSize="16dp"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/emailTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="24dp"
            android:text="@string/email_address"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editEmailSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:hint="Enter your email address"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/passwordTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="24dp"
            android:text="@string/password"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editPasswordSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:hint="Enter your password"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/forgotPasswordLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="257dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="24dp"
            android:clickable="true"
            android:focusable="true"
            android:onClick="onForgotPassword"
            android:text="Forgot Password?"
            android:textColor="@color/colorAccent"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="24dp"
            android:onClick="onBtnSignIn"
            android:text="@string/sign_in" />


    </LinearLayout>

    <Button
        android:id="@+id/btnReturn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"
        android:onClick="onReturn"
        android:text="Return" />

    <TextView
        android:id="@+id/resetMessageTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="340dp"
        android:layout_marginEnd="24dp"
        android:gravity="center"
        android:text="Please check your email for password reset instructions."
        android:textColor="@color/black"
        android:textSize="20sp"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/resetMessageTextView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="400dp"
        android:layout_marginEnd="24dp"
        android:gravity="center"
        android:text="After that, sign in as normal."
        android:textColor="@color/black"
        android:textSize="20sp"
        android:visibility="invisible" />



</RelativeLayout>